# JX3CalcBE

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.py  example.json  pytool_clean.py  pytool_create_ref.py  pytool_create_refmap.py  pytool_init_vscode.py  pytool_resanalysis.py
.github/workflows/: actions.yaml
example/: api.h  api.py  config.json  custom copy.lua  custom.lua  custom_cg_2.lua  custom_cg_2_sj.lua  custom_cg_2_y.lua  custom_exp.lua  custom_exp_cg.lua  custom_exp_qg.lua  custom_exp_qg_gmx.lua  custom_qg.lua  test.lua  test1.lua  test2.lua  test3.lua  thunder-collection_jx3calc.json  万灵当歌.lua  使用lua低级接口.lua  使用lua高级接口.lua  带起手的宏示例.lua  技能队列示例_崇光.lua  技能队列示例_崇光2段.lua  技能队列示例_崇光2段1.lua  技能队列示例_崇光二段2.lua  技能队列示例_齐光.lua
example/web/: create.json
resources/: CustomMacro.lua  api.lua  config.json  custom.lua
resources/templates/: index.html
scripts/: clean.py  create_ref.py  init_vscode.py  result_analysis.py
source/include/: concrete.h
source/include/concrete/: character.h  effect.h  npc.h  player.h
source/include/concrete/character/: all.h  character.h
source/include/concrete/character/npc/: npc124.h
source/include/concrete/character/player/: mj_fysj.h
source/include/concrete/effect/: base.h  derived.h  effect.h
source/include/concrete/effects/: all.h  derived.h
source/include/frame/: attribute.h  base_buff.h  base_skill.h  buff.h  character.h  character_attribute.h  character_buff.h  custom.h  event.h  globalparam.h  interface.h  lua.h  lua_func.h  lua_interface.h  lua_runtime.h  lua_static.h  runtime_lua.h  skill.h  skill_attribute.h  static_lua.h  static_ref.h  static_refmap.h  tab_interface.h  tab_static.h
source/include/frame/character/: character.h  effect.h  npc.h  player.h
source/include/frame/character/derived/: npc.h  player.h
source/include/frame/character/helper/: auto_rollback.h  auto_rollback_attrib.h  auto_rollback_attribute.h  auto_rollback_target.h  buff.h  runtime_castskill.h  skill.h  skill_runtime.h
source/include/frame/character/property/: attribute.h  buff.h  cooldown.h  damage.h  item.h  scene.h  skill.h  skillevent.h  skillrecipe.h
source/include/frame/common/: constant.h  damage.h  event.h  globalparam.h  item.h
source/include/frame/custom/: base.h  lua.h
source/include/frame/global/: buff.h  cooldown.h  item.h  skill.h  skillevent.h  skillrecipe.h  uibuff.h  uiskill.h
source/include/frame/lua/: global_func.h  interface.h  ref.h  statics.h
source/include/frame/ref/: global_skill.h  global_skillevent.h  lua_adaptive_type.h  lua_attribute_type.h  lua_normal.h  lua_other.h  lua_special.h  ref.h  skill.h  skillevent.h  tab_attribute.h
source/include/frame/statics/: lua_blacklist_files.h
source/include/global/: config.h  constexpr_channelinterval.h  constexpr_log.h  log.h  settings.h
source/include/interface/: global.h  init.h  lua.h  lua_character.h  lua_skill.h  skill.h
source/include/modules/: config.h  pool.h  task.h  web.h
source/include/plugin/: channelinterval.h  log.h
source/include/program/: init.h  log.h  settings.h  task.h  thread_pool.h  thread_web.h
source/include/thread/: calc_worker.h  child.h  main.h  pool.h  web_datashared.h  web_handler.h  web_helper.h  web_receiver.h  web_sender.h
source/include/thread/data_models/: task.h
source/include/thread/share/: p_arg.h
source/include/utils/: config.h  conv.h  json_schema.h
source/lib/: gdi.cpp  gdi.h  gdi.lib  libgdi.dylib
source/src/: main.cpp
source/src/concrete/: all.cpp  character.cpp  effect.cpp  npc.cpp  player.cpp
source/src/concrete/character/: all.cpp
source/src/concrete/character/npc/: npc124.cpp
source/src/concrete/character/player/: mj_fysj.cpp
source/src/concrete/effect/: derived.cpp  exp.cpp  hd.cpp
source/src/concrete/effects/: all.cpp  derived.cpp
source/src/concrete/player/: mj_fysj.cpp  mj_fysj_exp.cpp
source/src/frame/: attribute.cpp  base_buff.cpp  base_skill.cpp  buff.cpp  character.cpp  common.cpp  custom.cpp  event.cpp  interface.cpp  interface_lua.cpp  lua.cpp  lua_func.cpp  lua_interface.cpp  lua_interface_tab_str.cpp  lua_runtime.cpp  lua_static.cpp  lua_static_str.cpp  runtime_lua.cpp  skill.cpp  static_lua.cpp  tab_interface_str.cpp  tab_static_str.cpp
source/src/frame/character/: character.cpp
source/src/frame/character/derived/: custom_lua.cpp  effect.cpp  player.cpp  player_macrocustom.cpp
source/src/frame/character/helper/: auto_rollback.cpp  auto_rollback_attrib.cpp  auto_rollback_attribute.cpp  auto_rollback_target.cpp  buff.cpp  macro.cpp  runtime_castskill.cpp  skill.cpp
source/src/frame/character/method/: AddBuff.cpp  CastSkill.cpp  ClearCDTime.cpp  GetBuff.cpp  GetSkillLevel.cpp  GetSkillTarget.cpp  IsHaveBuff.cpp  LearnSkill.cpp  ModifyCoolDown.cpp  SetTimer.cpp  _CalcDamage.cpp  _other.cpp  attr.cpp  attribute.cpp  buff.cpp  calc.cpp  character.cpp  cooldown.cpp  hasBuff.cpp  item.cpp  other.cpp  other_in_lua.cpp  other_notin_lua.cpp  skill.cpp  skill_cast.cpp  skillevent.cpp  skillrecipe.cpp  timer.cpp
source/src/frame/character/property/: attribute.cpp  skillevent.cpp  skillrecipe.cpp
source/src/frame/custom/: lua.cpp
source/src/frame/global/: buff.cpp  cooldown.cpp  item.cpp  skill.cpp  skillevent.cpp  skillrecipe.cpp  uibuff.cpp  uiskill.cpp
source/src/frame/lua/: global_func.cpp  interface.cpp  statics.cpp
source/src/global/: config.cpp  constexpr_channelinterval.cpp  constexpr_log.cpp  log.cpp  settings.cpp
source/src/interface/: character.cpp  global.cpp  init.cpp  lua_character.cpp  lua_global.cpp  lua_init.cpp  lua_skill.cpp  luainit.cpp  skill.cpp
source/src/modules/: config.cpp  pool.cpp  task.cpp  thread_web.cpp  thread_web_task.cpp  web.cpp
source/src/plugin/: channelinterval.cpp  log.cpp
source/src/program/: init.cpp  log.cpp  settings.cpp  task.cpp  thread_web.cpp  thread_web_task.cpp
source/src/thread/: main.cpp  web_handler.cpp  web_handler_task.cpp
source/src/thread/data_models/: task.cpp
source/src/utils/: config.cpp  conv.cpp  json_schema.cpp
